--- a/Index.html
+++ b/Index.html
@@ -11,6 +11,7 @@
     <input type="text" id="search" placeholder="Search terms..." />
   </div>
   <div class="grid" id="grid"></div>
+  <script src="data/terms.js"></script> <!-- ✅ This line is essential -->
   <script src="js/main.js"></script>
 </body>
 </html>
